fix(file-input): prevent wrapping clear button to next line
This is a port of e451240621ce5c1e79ffd7c34b78bf0321170631 (#1481) to 16.x.

CDE-2183

--- a/projects/angular/src/forms/styles/_file-input.clarity.scss
+++ b/projects/angular/src/forms/styles/_file-input.clarity.scss
@@ -15,6 +15,7 @@
 
 @include mixins.exports('forms.file-input') {
   .clr-file-input-wrapper {
+    display: flex;
     position: relative;
     margin-top: tokens.$cds-global-space-3;
 
